pyst (0.0.4rc10-1) unstable; urgency=low

  * Bug fixes in config.py and more docs.
  * Version number correction.

 -- Matthew A. Nicholson <mnicholson@digium.com>  Tue, 11 Jan 2005 11:30:59 -0600

pyst (0.0.4rc9-1) unstable; urgency=low

  * Removed DEBUG flag

 -- Matthew A. Nicholson <mnicholson@digium.com>  Mon, 10 Jan 2005 18:40:04 -0600

pyst (0.0.4rc8-1) unstable; urgency=low

  * More manager.py updates 

 -- Matthew A. Nicholson <mnicholson@digium.com>  Thu,  6 Jan 2005 12:19:42 -0600

pyst (0.0.4rc7-1) unstable; urgency=low

  * A bunch of fixes to make the manager interface useable

 -- Matthew A. Nicholson <mnicholson@digium.com>  Wed,  5 Jan 2005 19:02:38 -0600

pyst (0.0.4rc6-1) unstable; urgency=low

  * Initial Release.

 -- Matthew A. Nicholson <mnicholson@digium.com>  Mon, 29 Nov 2004 14:06:42 -0600
