@@ -2,6 +2,7 @@ pyst (0.0.4rc10-1) unstable; urgency=low
 
   * Bug fixes in config.py and more docs.
   * Version number correction.
+  * Added line number tracking to config.py
 
  -- Matthew A. Nicholson <mnicholson@digium.com>  Tue, 11 Jan 2005 11:30:59 -0600
 
